# doover

./: .gitignore  CLAUDE.md  Cargo.toml  LAUNCH.md  Makefile  NOTICE.md  README.md
.github/workflows/: ci.yml  fuzz-hunt.yml  release.yml
bench/: RESULTS.md  hook_latency.py
crates/doover/: Cargo.toml
crates/doover-core/: Cargo.toml
crates/doover-core/examples/: parse_stdin.rs
crates/doover-core/registry/: README.md  coreutils.yaml  git.yaml  net.yaml  posix.yaml  services.yaml  shell.yaml
crates/doover-core/src/: hooks.rs  inspect.rs  journal.rs  lib.rs  maintenance.rs  redact.rs  registry.rs  resolver.rs  snapshot.rs  undo.rs
crates/doover-core/tests/: fuzz_hunt.rs  hook_fixtures.rs  hooks.rs  inspect.rs  integration_safety.rs  journal.rs  maintenance.rs  registry.rs  resolver_corpus.rs  resolver_corpus_safety.rs  resolver_coverage.rs  resolver_oracle.rs  resolver_props.rs  segfault_regressions.rs  snapshot.rs  stackprobe.rs  undo.rs
crates/doover-core/tests/snapshots/: registry__classification_matrix_snapshot.snap
crates/doover/src/: main.rs
crates/doover/tests/: cli.rs
packaging/homebrew/: doover.rb
scripts/: minimize.sh
tests/corpus/oracle/: words.yaml
tests/corpus/parser/: 000-seed.yaml  010-coreutils.yaml  020-globs.yaml  030-redirects.yaml  040-safe.yaml  050-git.yaml  060-external.yaml  070-opaque.yaml  080-quoting.yaml  090-multi.yaml  100-misc.yaml  110-audit.yaml  120-audit2.yaml  130-dotglob.yaml  140-audit6.yaml  150-audit7.yaml
tests/e2e/: S0_smoke.bats  S2_S3_S5_undo.bats  S7_init_gc.bats  S8_failopen.bats
tests/fixtures/hook-events/: README.md  post_bash_cd_updates_cwd.json  post_bash_pwd_with_stdout.json  post_bash_rm_recursive.json  pre_bash_cwd_tracks_prior_cd.json  pre_bash_failing_command.json  pre_bash_heredoc_multiline.json  pre_bash_rm_recursive.json  pre_bash_unicode_redirect.json
