[workspace]
resolver = "2"
members = ["crates/doover-core", "crates/doover"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/CaydenChik/doover"
homepage = "https://github.com/CaydenChik/doover"
rust-version = "1.85"

[workspace.dependencies]
doover-core = { path = "crates/doover-core", version = "0.0.1" }
clap = { version = "4", features = ["derive"] }
