[workspace]
resolver = "2"
members = ["crates/doover-core", "crates/doover"]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/CaydenChik/doover"
homepage = "https://github.com/CaydenChik/doover"
rust-version = "1.85"

[workspace.dependencies]
doover-core = { path = "crates/doover-core", version = "0.1.2" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
brush-parser = "0.4"
glob = "0.3"
reflink-copy = "0.1"
blake3 = { version = "1", features = ["mmap", "rayon"] }
walkdir = "2"
regex = "1"
xattr = "1"
libc = "0.2"
rusqlite = { version = "0.40", features = ["bundled"] }
serde_json = "1"
insta = "1"
tempfile = "3"
proptest = "1"
