[package]
name = "doover-core"
description = "Core library for doover: session-scoped snapshot, journal, and undo for AI agent shell actions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
glob.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
proptest.workspace = true
