[package]
name = "doover-core"
description = "Core library for doover: session-scoped snapshot, journal, and undo for AI agent shell actions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
brush-parser.workspace = true
glob.workspace = true
reflink-copy.workspace = true
blake3.workspace = true
walkdir.workspace = true
regex.workspace = true
xattr.workspace = true
libc.workspace = true
rusqlite.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
proptest.workspace = true
