[package]
name = "doover"
description = "Your agent's checkpoints don't cover bash. Doover does — snapshot, journal, and undo for AI agent shell actions."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["undo", "snapshot", "ai-agents", "claude-code", "safety"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap.workspace = true
doover-core.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2"
tempfile.workspace = true
serde_json.workspace = true
predicates = "3"
